feat(cdconc): basic implicit name adaptation working